* Save zoom factor over kiwix restarts (ID: 3367428)
* Avoid sporadic problems with indexing/searching and certain Windows version (was necessary to install vcredist_x86.exe)
* Fix configure for CLucene and Slackware (ID: 3408023)
* New option remember open tabs, focused tab and respective scroll postion in the tabs over reboots (ID: 3117123)

Kiwix 0.9 beta2
* Regression fix, tabs should not be visible per default
* Fixed deprecated tmp.kiwix.org/zim links in help files (ID: 3376641)
* Now able to load on GNU/Linux with the command line ZIM files with " " in their path
* Add menuitem File > Browse Library (ID: 3377139)
* Avoid segfault by bookmarks pointing to a missing ZIM file (ID: 3376642)
* Bookmarks now compatible with multizim
* Fixed the searchindex assignement problem if the current ZIM file is changed during indexing process (ID: 3377136)
* Fixed broken locales it and ar
* Fixed OSX crashes if previous ZIM was gone (ID: 3243147)
* Fixed regression with not always 100% visible close tab button (ID: 3377280)
* Fixed issue occuring by installing PPA 0.9 beta1 over alpha7 fails (ID: 3377130)
* Fixed drag zim file on Kiwix icon in OSX Dock (ID: 3315167)
* Fixed drag zim on Kiwix window in OSX (ID: 3385313)
* Fixed fullscreen shortcut for OSX now compliant to standard (ID: 3304022)
* Avoid the possibility to open an external url in a new kiwix tab (does not make sense)
* Implement ctrl+w keyboard shortcut to close the current tab
* Implement ctrl+W keyboard shortcut to close all tabs
* Close all tabs before opening new ZIM file, avoid weird situations (ID: 3372140)
* Fixed tabs behavior
* FullScreen support for Tabs
* Revamped Tabs UI on Linux, OSX and Windows
* Introduce/Improve keyboard shortcuts behaviour for a better scrolling experience (ID: 3389521)
* Fixed problem with not working content manager on Windows installed instances of Kiwix (ID: 3385476)
* Fixed regression: scroll is funky on OSX (ID: 3385602)
* Fixed a regression impacting javascript links
