@@ -209,12 +209,12 @@ function switchToNewTab() {
 }
 
 /* Close all tabs */
-function closeAllTabs() {
+function closeAllTabs(noConfirm) {
     var tabHeaders = getTabHeaders().getElementsByTagName('tab');
     var tabHeadersLength = tabHeaders.length
 
     if (tabHeadersLength > 1) {
-	if (displayConfirmDialog("This will close all your tabs. Are you sure you want to continue?", "Close tabs")) {
+	if (noConfirm || displayConfirmDialog("This will close all your tabs. Are you sure you want to continue?", "Close tabs")) {
 	    for (var i=tabHeadersLength-1; i>=0; i--) {
 		var node = tabHeaders[i];
 		var id = node.getAttribute('id').replace("tab-header-", "");
